example/secondfile/objects/VASA_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>VASA Logs</relationshipLabel>
        <relationshipName>VASA_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VASA_A_Status__c</fullName>
        <label>VASA A Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASA_B_Status__c</fullName>
        <label>VASA B Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VASA Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote_Proposal__c</columns>
        <columns>VASA_A_Status__c</columns>
        <columns>VASA_B_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VASA Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>